# botcord

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
scripts/: fetch-resources.mjs  make-portable.mjs  makeicon.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/chromium/: README.md
src-tauri/resources/extensions/: README.md
src-tauri/sidecars/voice/: index.js  package.json  pnpm-lock.yaml
src-tauri/src/: captcha.rs  lib.rs  main.rs  register_bridge.rs  state.rs
src-tauri/src/commands/: accounts.rs  broadcast.rs  browser.rs  guilds.rs  inboxes.rs  mod.rs  profile.rs  proxies.rs  register_browser.rs  social.rs  vault.rs  voice.rs
src-tauri/src/discord/: api.rs  http_client.rs  identity.rs  mod.rs
src-tauri/src/sidecar/: voice.rs
src-tauri/src/storage/: crypto.rs  db.rs
src/components/: AccountTable.tsx  Avatar.tsx  BroadcastModal.tsx  BulkBar.tsx  ExportTokensModal.tsx  FriendModal.tsx  InviteModal.tsx  JoinVcModal.tsx  NetBackground.tsx  NitroBadge.tsx  ProfileModal.tsx  ProxySlotSlider.tsx  RegisterModal.tsx  Shell.tsx  ShimmerText.tsx  StatusPill.tsx  Titlebar.tsx  TokenCheckCard.tsx
src/lib/: ipc.ts
src/routes/: Accounts.tsx  Inbox.tsx  LockScreen.tsx  Proxies.tsx  Servers.tsx
src/store/: accounts.ts  proxies.ts  servers.ts  vault.ts
src/styles/: index.css
